--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     </div>
 </div>
         <!-- page facts start -->
-        <div class="lower-page-facts" data-background="img/background/facts-bg.jpg" id="page-facts">
+        <div class="lower-page-facts" data-background="img/fixed.png" id="page-facts">
             <!-- curtains start -->
             <div class="curtains facts"></div><!-- curtains end -->
             <!-- container start -->
@@ -347,35 +347,35 @@
                                 <div class="col-sm-4">
                                     <div class="featured-work-box">
                                         <div class="featured-work-photo image-works">
-                                            <div class="hover-effect"></div>
+                                            <!-- <div class="hover-effect"></div> -->
                                             <div class="icon-works">
-                                                <a class="iw-slide-left fa fa-twitter" href="#"></a> <a class="fa fa-facebook" href="#"></a> <a class="iw-slide-right fa fa-google-plus" href="#"></a>
-                                            </div><img alt="Team" class="img-correction" src="img/featured-work/featured-work-01.jpg">
+                                                <!-- <a class="iw-slide-left fa fa-twitter" href="#"></a> <a class="fa fa-facebook" href="#"></a> <a class="iw-slide-right fa fa-google-plus" href="#"></a> -->
+                                            </div><img alt="Team" class="img-correction img-hover" src="img/Featured/Kottigoda.png">
                                         </div>
                                     </div>
-                                    <div class="featured-work-info">
+                                    <!-- <div class="featured-work-info">
                                         <h3>
                                             Commercial / Stock
                                         </h3>
-                                    </div>
+                                    </div> -->
                                 </div><!-- featured work 1 end -->
                                 <!-- featured work 2 start -->
                                 <div class="col-sm-4">
                                     <div class="featured-work-box">
                                         <div class="featured-work-photo image-works">
-                                            <div class="hover-effect"></div>
+                                            <!-- <div class="hover-effect"></div> -->
                                             <div class="icon-works">
-                                                <a class="iw-slide-left fa fa-twitter" href="#"></a> <a class="fa fa-facebook" href="#"></a> <a class="iw-slide-right fa fa-google-plus" href="#"></a>
-                                            </div><img alt="Team" class="img-correction" src="img/featured-work/featured-work-02.jpg">
+                                                <!-- <a class="iw-slide-left fa fa-twitter" href="#"></a> <a class="fa fa-facebook" href="#"></a> <a class="iw-slide-right fa fa-google-plus" href="#"></a> -->
+                                            </div><img alt="Team" class="img-correction img-hover" src="img/Featured/Ranul.png">
                                         </div>
                                     </div>
-                                    <div class="featured-work-info">
+                                    <!-- <div class="featured-work-info">
                                         <h3>
                                             Beauty / Fashion
                                         </h3>
-                                    </div>
-                                </div><!-- featured work 2 end -->
-                                <!-- featured work 3 start -->
+                                    </div> -->
+                                </div>
+<!-- 
                                 <div class="col-sm-4">
                                     <div class="featured-work-box">
                                         <div class="featured-work-photo image-works">
@@ -390,8 +390,7 @@
                                             Nature / Landscapes
                                         </h3>
                                     </div>
-                                </div><!-- featured work 3 end -->
-                                <!-- featured work 4 start -->
+                                </div>
                                 <div class="col-sm-4">
                                     <div class="featured-work-box">
                                         <div class="featured-work-photo image-works">
@@ -406,8 +405,7 @@
                                             People / Portraits
                                         </h3>
                                     </div>
-                                </div><!-- featured work 4 end -->
-                                <!-- featured work 5 start -->
+                                </div>
                                 <div class="col-sm-4">
                                     <div class="featured-work-box">
                                         <div class="featured-work-photo image-works">
@@ -422,8 +420,7 @@
                                             Naked / Acts
                                         </h3>
                                     </div>
-                                </div><!-- featured work 5 end -->
-                                <!-- featured work 6 start -->
+                                </div>
                                 <div class="col-sm-4">
                                     <div class="featured-work-box">
                                         <div class="featured-work-photo image-works">
@@ -438,7 +435,7 @@
                                             Editorials / Magazines
                                         </h3>
                                     </div>
-                                </div><!-- featured work 6 end -->
+                                </div> -->
                             </div><!-- featured work carousel end -->
                         </div><!-- row end -->
                         <!-- row start -->
