--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <nav class="main-navigation transparent fix-sticky">
             <div class="full-width-wrapper">
                 <div class="main-navigation-logo">
-                    <a class="logo navscroll" data-idpage="page-home"><img alt="Logo" src="img/logo-light.png"></a>
+                    <a class="logo navscroll" data-idpage="page-home"><img alt="Logo" src="img/logos/Logo White Transparent.png"></a>
                 </div>
                 <div class="main-inner-navigation">
                     <ul>
@@ -132,7 +132,7 @@
         </nav><!-- main navigation end -->
         <!-- mobile navigation start -->
         <div class="mobile-navigation-wrapper">
-            <a class="logo-mobile navscroll" data-idpage="page-home"><img alt="Logo" src="img/logo-light-mobile.png"></a>
+            <a class="logo-mobile navscroll" data-idpage="page-home"><img alt="Logo" src="img/logos/Logo White Transparent.png"></a>
             <div class="navigation-fire" id="navigation-icon">
                 <span></span> <span></span> <span></span>
             </div>
@@ -1419,7 +1419,7 @@
                 <!-- row start -->
                 <div class="row footer-credits">
                     <div class="footer-credits-logo navscroll bt-nav bt-nav-logo" data-idpage="page-home">
-                        <a href="#"><img alt="Logo Footer" src="img/logo-footer.png"></a>
+                        <a href="#"><img alt="Logo Footer" src="img/logos/Logo White Transparent.png"></a>
                     </div><!-- social icons footer start -->
                     <div class="social-icons-wrapper">
                         <ul class="social-icons">
