--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        The Keepsake Weddings || For those who want more than iPhone content
+        Keepsake Weddings | Authentic & Timeless Wedding Content
     </title>
     <meta content="" name="description">
     <meta content="" name="author">
@@ -29,10 +29,16 @@
         rel="stylesheet" type="text/css"><!-- google fonts end -->
 
 
-         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+         <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
     <!--[if lt IE 9]>
             <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
         <![endif]-->
+
+        <link rel="icon" type="image/png" href="/img/favicon/./favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/img/favicon/./favicon.svg" />
+<link rel="shortcut icon" href="/img/favicon/./favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/./apple-touch-icon.png" />
+<link rel="manifest" href="/img/favicon/./site.webmanifest" />
 </head>
 
 <body>
@@ -93,27 +99,25 @@
         </div><!-- center container end -->
     </div><!-- signup form end -->
     <!-- search modal start -->
-    <div class="search-modal">
-        <!-- center container start -->
+    <!-- <div class="search-modal">
         <div class="center-container">
-            <!-- center block start -->
             <div class="center-block">
-                <!-- search form start -->
                 <div id="search-wrap">
                     <form action="#" autocomplete="on">
                         <span class="input-search"><input id="search" name="search"
                                 placeholder="To search, type and press enter." type="text"></span>
                     </form>
-                </div><!-- search form end -->
-            </div><!-- center block end -->
-        </div><!-- center container end -->
-    </div><!-- search modal end -->
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <!-- search modal end -->
     <!-- main navigation start -->
     <nav class="main-navigation transparent fix-sticky">
         <div class="full-width-wrapper">
             <div class="main-navigation-logo">
                 <a class="logo navscroll" data-idpage="page-home"><img alt="Logo"
-                        src="img/logos/Logo White Transparent.png"></a>
+                        src="img/logos/navbar.png"></a>
             </div>
             <div class="main-inner-navigation">
                 <ul>
@@ -133,7 +137,7 @@
                         <a class="navscroll link-underline" data-idpage="page-services">Services</a>
                     </li>
                     <li>
-                        <a class="navscroll link-underline" data-idpage="page-news">News</a>
+                        <a class="navscroll link-underline" data-idpage="page-news">Pricing</a>
                     </li>
                     <li>
                         <a class="navscroll link-underline" data-idpage="page-contact">Contact</a>
@@ -141,9 +145,9 @@
                     <li>
                         <a>&nbsp;</a>
                     </li>
-                    <li class="search-modal-launcher">
+                    <!-- <li class="search-modal-launcher">
                         <a href="javascript:void(0);"><i class="fa fa-search"></i> Search</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -217,7 +221,7 @@
                 </li> -->
             <li>
                 <a class="nav-button "
-                    href="https://wa.me/94740218835?text=Hello%20there%2C%20I%20am%20interested!">Book us</a>
+                    href="https://wa.me/94740218835?text=Hello%20there%2C%20I%20am%20interested!" target="_blank">Book us</a>
             </li>
         </ul>
     </nav><!-- home navigation end -->
@@ -1285,7 +1289,7 @@
                     </ul>
                 </div><!-- social icons footer end -->
                 <div class="footer-credits-copyright">
-                    <a href="#">&copy;2017 All Rights Reserved.</a>
+                    <a href="#">&copy;2025 All Rights Reserved.</a>
                 </div>
             </div><!-- row end -->
             <!-- row start -->
