--- a/index.html
+++ b/index.html
@@ -1302,7 +1302,7 @@
     <!-- lightbox start -->
     <div class="lightbox"></div><!-- lightbox end -->
     <!-- scripts start -->
-    <script src="https://maps.googleapis.com/maps/api/js" type="text/javascript">
+    <!-- <script src="https://maps.googleapis.com/maps/api/js" type="text/javascript"> -->
     </script>
     <script src="js/jquery-1.12.4.min.js" type="text/javascript">
     </script>
