--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
         <![endif]-->
 
-        <link rel="icon" type="image/png" href="/img/favicon/./favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/img/favicon/./favicon.svg" />
-<link rel="shortcut icon" href="/img/favicon/./favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/./apple-touch-icon.png" />
-<link rel="manifest" href="/img/favicon/./site.webmanifest" />
+        <link rel="icon" type="image/png" href="/img/favicon/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/img/favicon/favicon.svg" />
+<link rel="shortcut icon" href="/img/favicon/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
+<link rel="manifest" href="/img/favicon/site.webmanifest" />
 </head>
 
 <body>
@@ -1310,7 +1310,7 @@
     </script>
     <script src="js/plugins.js" type="text/javascript">
     </script>
-    <script src="js/the-wall-slider.js" type="text/javascript">
+    <script src="js/the-wall-slider.js" defer type="text/javascript">
     </script><!-- scripts end -->
 </body>
 
