--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- style end -->
     <!-- google fonts start -->
     <link
-        href="http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7CDosis:200,300,400,500,600,700,800%7COpen+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic%7COswald:300,400,700"
+        href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7CDosis:200,300,400,500,600,700,800%7COpen+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic%7COswald:300,400,700"
         rel="stylesheet" type="text/css"><!-- google fonts end -->
 
 
@@ -38,7 +38,7 @@
 <link rel="icon" type="image/svg+xml" href="/img/favicon/favicon.svg" />
 <link rel="shortcut icon" href="/img/favicon/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
-<link rel="manifest" href="/img/favicon/site.webmanifest" />
+<!-- <link rel="manifest" href="/img/favicon/site.webmanifest" /> -->
 </head>
 
 <body>
@@ -155,7 +155,7 @@
     <!-- mobile navigation start -->
     <div class="mobile-navigation-wrapper">
         <a class="logo-mobile navscroll" data-idpage="page-home"><img alt="Logo"
-                src="img/logos/Logo White Transparent.png"></a>
+                src="img/logos/Logo_White_Transparent.png"></a>
         <div class="navigation-fire" id="navigation-icon">
             <span></span> <span></span> <span></span>
         </div>
@@ -527,7 +527,7 @@
     <!-- item page 1 INTRO start -->
    <div class="lower-page-works whiteline">
         <div class="col-item n-2">
-            <div class="photo image-works" data-photo-src="weddings/kevin/1.jpg">
+            <div class="photo image-works" data-photo-src="weddings/kevin/1.webp">
                 </div>
         </div>
         <div class="col-item n-2">
@@ -545,7 +545,7 @@
                 </div>
             </div>
             <div class="row-item n-2">
-                <div class="photo image-works" data-photo-src="weddings/kevin/2.jpg">
+                <div class="photo image-works" data-photo-src="weddings/kevin/2.webp">
                     </div>
             </div>
         </div>
@@ -563,7 +563,7 @@
                     </div>
                 </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/kevin/3.jpg">
+                <div class="photo image-works" data-photo-src="weddings/kevin/3.webp">
                     </div>
             </div>
         </div>
@@ -590,7 +590,7 @@
                 </div>
             </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/kevin/4.jpg">
+                <div class="photo image-works" data-photo-src="weddings/kevin/4.webp">
                     </div>
             </div>
         </div>
@@ -609,7 +609,7 @@
                     </div>
                 </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/kevin/5.jpg">
+                <div class="photo image-works" data-photo-src="weddings/kevin/5.webp">
                     </div>
             </div>
         </div>
@@ -631,7 +631,7 @@
                 </div>
             </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/kevin/6.jpg">
+                <div class="photo image-works" data-photo-src="weddings/kevin/6.webp">
                     </div>
             </div>
         </div>
@@ -650,7 +650,7 @@
                     </div>
                 </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/kevin/7.jpg">
+                <div class="photo image-works" data-photo-src="weddings/kevin/7.webp">
                     </div>
             </div>
         </div>
@@ -667,7 +667,7 @@
                 </div>
             </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/kevin/8.jpg">
+                <div class="photo image-works" data-photo-src="weddings/kevin/8.webp">
                     </div>
             </div>
         </div>
@@ -686,13 +686,13 @@
                     </div>
                 </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/kevin/9.jpg">
+                <div class="photo image-works" data-photo-src="weddings/kevin/9.webp">
                     </div>
             </div>
         </div>
     </section><div class="clearfix"></div><div class="lower-page-works whiteline" id="item-page-2">
         <div class="col-item n-2">
-            <div class="photo image-works" data-photo-src="weddings/ranul/1.jpg">
+            <div class="photo image-works" data-photo-src="weddings/ranul/1.webp">
                 </div>
         </div>
         <div class="col-item n-2">
@@ -710,7 +710,7 @@
                 </div>
             </div>
             <div class="row-item n-2">
-                <div class="photo image-works" data-photo-src="weddings/ranul/2.jpg">
+                <div class="photo image-works" data-photo-src="weddings/ranul/2.webp">
                     </div>
             </div>
         </div>
@@ -728,7 +728,7 @@
                     </div>
                 </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/ranul/3.jpg">
+                <div class="photo image-works" data-photo-src="weddings/ranul/3.webp">
                     </div>
             </div>
         </div>
@@ -748,7 +748,7 @@
                 </div>
             </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/ranul/4.jpg">
+                <div class="photo image-works" data-photo-src="weddings/ranul/4.webp">
                     </div>
             </div>
         </div>
@@ -767,7 +767,7 @@
                     </div>
                 </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/ranul/5.jpg">
+                <div class="photo image-works" data-photo-src="weddings/ranul/5.webp">
                     </div>
             </div>
         </div>
@@ -787,7 +787,7 @@
                 </div>
             </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/ranul/6.jpg">
+                <div class="photo image-works" data-photo-src="weddings/ranul/6.webp">
                     </div>
             </div>
         </div>
@@ -806,7 +806,7 @@
                     </div>
                 </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/ranul/7.jpg">
+                <div class="photo image-works" data-photo-src="weddings/ranul/7.webp">
                     </div>
             </div>
         </div>
@@ -826,7 +826,7 @@
                 </div>
             </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/ranul/8.jpg">
+                <div class="photo image-works" data-photo-src="weddings/ranul/8.webp">
                     </div>
             </div>
         </div>
@@ -845,7 +845,7 @@
                     </div>
                 </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/ranul/9.jpg">
+                <div class="photo image-works" data-photo-src="weddings/ranul/9.webp">
                     </div>
             </div>
         </div>
@@ -865,7 +865,7 @@
                 </div>
             </div>
             <div class="row-item n-3">
-                <div class="photo image-works" data-photo-src="weddings/ranul/10.jpg">
+                <div class="photo image-works" data-photo-src="weddings/ranul/10.webp">
                     </div>
             </div>
         </div>
