--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <![endif]-->
 
         <link rel="icon" type="image/png" href="/img/favicon/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/png" href="/img/favicon/favicon-96x96.png" />
 <link rel="icon" type="image/svg+xml" href="/img/favicon/favicon.svg" />
 <link rel="shortcut icon" href="/img/favicon/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
@@ -248,7 +249,8 @@
                             // 01
                         </h4>
                         <h2>
-                            About <span class="get-behind">Who We Are</span>
+                            About Who We Are
+                            <!-- <span class="get-behind"></span> -->
                         </h2>
                         <h3>
                             Wedding Cinematography & Storytelling
@@ -275,7 +277,7 @@
                                 We are <strong>Keepsake Weddings</strong>, a team of passionate wedding content creators
                                 based in Galle, Sri Lanka — available worldwide. We specialize in capturing the moments
                                 beyond the posed and planned – the <strong> candid smiles, fleeting glances, and the authentic
-                                atmosphere></strong>as it naturally unfolds. With nearly a decade of experience in live events
+                                atmosphere</strong>as it naturally unfolds. With nearly a decade of experience in live events
                                 and over five years focused on specialized content creation and social media, our deep
                                 understanding of storytelling is combined with technical mastery.
                             </p>
@@ -366,7 +368,8 @@
                             // 02
                         </h4>
                         <h2>
-                            Work <span class="get-behind">Featured</span>
+                            Work Featured
+                            <!-- <span class="get-behind"></span> -->
                         </h2>
                         <h3>
                             Photography / Portfolio
@@ -510,7 +513,8 @@
                     // 03
                 </h4>
                 <h2>
-                    Works <span class="get-behind">Full portfolio</span>
+                    Works Full Portfolio
+                    <!-- <span class="get-behind"></span> -->
                 </h2>
                 <h3>
                     Photography / Portfolio
@@ -883,7 +887,8 @@
                     <div class="row alt" data-aos="fade-up"data-aos-duration="1000">
                         <h4>04</h4>
                         <h2>
-                            Services <span class="get-behind">What We Do</span>
+                            Services What We Do
+                            <!-- <span class="get-behind"></span> -->
                         </h2>
                         <h3>Wedding Content Creation & Candid Storytelling</h3>
                     </div>
@@ -975,7 +980,8 @@
                     <div class="row alt" >
                         <h4>05</h4>
                         <h2>
-                            Pricing <span class="get-behind">Plans</span>
+                            Pricing Plans
+                            <!-- <span class="get-behind"></span> -->
                         </h2>
                         <h3>Curated Keepsake Packages</h3>
                     </div>
@@ -1152,7 +1158,8 @@
                             // 06
                         </h4>
                         <h2>
-                            Contact <span class="get-behind">Get In Touch</span>
+                            Contact Get In Touch
+                            <!-- <span class="get-behind"></span> -->
                         </h2>
                         <h3>
                             Photography / Portfolio
